# flact

./: README.md
backend/: .gitignore  Makefile  memo.txt  pyproject.toml
backend/src/backend/: __main__.py  main.py  todo.py
frontend/: README.md  bunfig.toml  package.json
frontend/src/: App.tsx  Counter.tsx  index.css  index.html  index.tsx  main.tsx
frontend/src/apps/counter/: Counter.tsx
frontend/src/apps/sample/: Sample.tsx
frontend/src/apps/simple_memo/: SimpleMemo.tsx
frontend/src/apps/todo/: Todo.tsx
frontend/src/pages/pomodoro_timer/: PomodoroTimer.tsx
frontend/src/pages/todo/: Todo.tsx
