[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taku", email = "23535528+taku-shimomura@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
